--- a/themes/default/js/plugins/selectize.clear.css
+++ b/themes/default/js/plugins/selectize.clear.css
@@ -202,6 +202,7 @@
   -webkit-user-select: auto !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
+  color: white !important;
 }
 .selectize-input > input::-ms-clear {
   display: none;
